# baxter_rosbridge_adapter

./: README.md  package.xml  setup.cfg  setup.py
baxter_rosbridge_adapter/: baxter_cli.py  baxter_grippers_cli.py  joint_state_bridge.py
launch/: baxter_visualization.launch.py
rviz/: baxter.rviz
