<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baxter_rosbridge_adapter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gianluca.galvagni@edu.unige.it">gian_galv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>baxter_description</depend>
  <depend>xacro</depend>

  <exec_depend>python3-roslibpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
